--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/textAuthor"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/textColor"
+                    android:textColor="?android:textColorPrimary"
                     android:textStyle="bold"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:layout_weight="1"
@@ -47,7 +47,7 @@
                 android:id="@+id/textContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/textColor"
+                android:textColor="?android:textColorPrimary"
                 android:paddingTop="5dp" />
 
             <LinearLayout
@@ -68,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginEnd="10dp"
-                    android:textColor="@color/textColor"
+                    android:textColor="?android:textColorPrimary"
                     android:layout_marginStart="5dp" />
 
                 <ImageView
@@ -83,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="@color/textColor"
+                    android:textColor="?android:textColorPrimary"
                     android:layout_marginEnd="10dp"
                     android:layout_marginStart="5dp" />
 
